tests/ui/async-await/dyn/wrong-size.stderr
warning: the feature `async_fn_in_dyn_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/wrong-size.rs:4:12
   |
LL | #![feature(async_fn_in_dyn_trait)]
   |            ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #133119 <https://github.com/rust-lang/rust/issues/133119> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0038]: the trait `AsyncTrait` is not dyn compatible
  --> $DIR/wrong-size.rs:21:17
   |
LL |     let x: &dyn AsyncTrait = &"hello, world!";
   |                 ^^^^^^^^^^ `AsyncTrait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/wrong-size.rs:9:14
   |
LL | trait AsyncTrait {
   |       ---------- this trait is not dyn compatible...
LL |     async fn async_dispatch(&self);
   |              ^^^^^^^^^^^^^^ ...because method `async_dispatch` is `async`
   = help: consider moving `async_dispatch` to another trait
   = help: only type `&'static str` implements `AsyncTrait`; consider using it directly instead.

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0038`.
